--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "vue": "^2.5.2",
+    "vue-infinite-loading": "^2.2.3",
     "vue-material": "^1.0.0-beta-8",
     "vue-router": "^3.0.1"
   },
