--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "google-images": "^2.1.0",
+    "image-downloader": "^3.3.0",
     "vue": "^2.5.2",
     "vue-infinite-loading": "^2.2.3",
     "vue-material": "^1.0.0-beta-8",
@@ -56,10 +58,12 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "request": "^2.85.0",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.7",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
+    "setimmediate": "^1.0.5",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
