--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "google-images": "^2.1.0",
     "image-downloader": "^3.3.0",
     "vue": "^2.5.2",
+    "vue-async-computed": "^3.3.1",
     "vue-infinite-loading": "^2.2.3",
     "vue-material": "^1.0.0-beta-8",
     "vue-router": "^3.0.1"
